# ai-stock-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  next.config.ts  package-lock.json  package.json
backend/: README.md  check_db_forecasts.py  debug_models.py  evaluate_accuracy.py  forecasting.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  service.py  test_yfinance.py
backend/archive/: prediction.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/market/: page.tsx
src/app/portfolio/: page.tsx
src/app/settings/: page.tsx
src/components/dashboard/: GrowthTable.tsx  SectorChart.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/market/: CompanyDeepDiveChart.tsx  MarketControls.tsx  StackPerformanceChart.tsx
src/components/portfolio/: PortfolioBuilder.tsx
src/data/: mockData.ts
src/store/: useStore.ts
